--- a/registry/auth/nginx.conf
+++ b/registry/auth/nginx.conf
@@ -44,6 +44,7 @@ http {
         return 404;
       }
 
+      # 1) We need to return 401 if Basic header is not included
       if ($remote_user = '') {
         add_header  WWW-Authenticate 'Basic' always;
         return 401;
@@ -76,6 +77,7 @@ http {
       proxy_set_header        Content-Length "";
       proxy_set_header        X-Original-URI $request_uri;
       proxy_set_header        X-Original-URI $request_uri;
+      # 2) We need to add proxy header to request
       proxy_set_header        ClientRequestResource "DockerRegistry";
     }
 
